# LibgdxDemo

./: README.md  build.gradle  requirements.txt  run.ps1
JNILib/: CMakeLists.txt  build.ps1  createH.ps1
JNILib/include/: com_thzs_app_datacoplite_util_Native_windows_NativeWindowsSerialPort.h  com_thzs_app_datacoplite_util_Native_windows_NativeWindowsSupportUtils.h
JNILib/source/: NativeWindowsSupportUtils.cpp
assets/: Config.properties
assets/pythonScript/boluobao/: blb_img_cut.py  blb_img_ocr.py  blb_img_to_2.py
assets/pythonScript/translator/: start.py  utils.py
assets/save/: AIResultViewHandle.properties  CrawlerConfig.properties  LabelImgView.properties  STM32ViewHandle.properties  ServerControlViewHandle.properties  StartViewHandle.properties  WhiteViewHandle.properties  setting.sav
assets/script/: archive.js  mk.js
assets/xml/: InformationPanel.xml  MoreShape.xml  YzButtonSkin.xml  YzCheckButtonSkin.xml  YzEditAreaSkin.xml  icon.xml
core/src/com/thzs/app/datacoplite/: AppStart.java  Views.java
core/src/com/thzs/app/datacoplite/core/: File.java  Game.java  Input.java  Log.java  Path.java  Res.java  Setting.java  Text.java  UI.java
core/src/com/thzs/app/datacoplite/core/Controller/: Archive.java  ArchiveController.java
core/src/com/thzs/app/datacoplite/core/Query/: $.java  Callback.java  CustomCallback.java  CustomRunnable.java  Each.java  GdxCellQuery.java  GdxFrame.java  GdxQuery.java  GdxQueryRunnable.java  ListQuery.java  Map.java  MapQuery.java  NullActor.java  RemoveTest.java  Test.java  TypedGdxQuery.java
core/src/com/thzs/app/datacoplite/lib/: LazyBitmapFont.java
core/src/com/thzs/app/datacoplite/ui/: AsyncLoadImage.java
core/src/com/thzs/app/datacoplite/ui/action/: LinkAction.java  SimpleAction.java
core/src/com/thzs/app/datacoplite/ui/view/: ParameterizableView.java  View.java
core/src/com/thzs/app/datacoplite/ui/widget/: ConsoleText.java  Image.java  Label.java  TextInputActor.java
core/src/com/thzs/app/datacoplite/util/: FirstLoadProcess.java  JsonFind.java  Timer.java
core/src/com/thzs/app/datacoplite/util/API/: Auto.java  OCR.java  OCRDataLine.java  OCRExample.json  Translate.java  Yolo.java
core/src/com/thzs/app/datacoplite/util/Native/: MutApiSupport.java  NativeSetting.java
core/src/com/thzs/app/datacoplite/util/boluobaoOCR/: BoLuoBaoOCRUtils.java  BoLuoBaoPythonJavaCalled.java  ResultComplete.java  (+1 more)
desktop/: build.gradle
desktop/src/com/thzs/app/datacoplite/: DesktopLauncher.java
(+88 files in other folders)
